--- a/docs/CSD_landscape.Rmd
+++ b/docs/CSD_landscape.Rmd
@@ -8,7 +8,6 @@ output:
 bibliography: references.bib
 ---
 
-
 # Overview
 
 The following section provides an example of a possible workflow using **landscape** connectivity data used as a conservation feature. It is important to note that these are indeed examples of the software's capabilities and are not intended to be used as scientific advice in a spatial conservation planning process. It is the user's responsibility to ensure that all analysis decisions are valid.
@@ -229,6 +228,7 @@ conmat <- read.csv("tutorial/CSD_landscape/IsolationByDistance.csv")
 datatable(conmat[1:7,],rownames = FALSE, options = list(searching = FALSE))
 
 ```
+
 # Marxan Connect
 
 ## Loading your project in Marxan Connect
@@ -257,9 +257,9 @@ Since we are working with landscape data, we choose the **Landscape Input** opti
 
 For the landscape connectivity approach, Marxan Connect calculates connectivity metrics from networks based either on Euclidean distance or least-cost path between the centroid of planning units. However, other software packages such as [Circuitscape](http://www.circuitscape.org/) [@McRae2009-aq] and [Conefor](http://www.conefor.org/) [@Saura2009-sa] currently provide a richer set of options and specialized  methods. These software packages can be used to generate custom conservation features or connectivity matrices both of which can then be used in Marxan Connect. For example, one could generate a network using current density using Circuitscape and input the resulting connectivity matrix into Marxan Connect to generate conservation features or spatial dependencies.
 
-The connectivity data we use in this example was created by Marxan Connect by calculating using the "**Habitat Type +Resistance**" options. We selected the "**Euclidean Distance**" Distance Calculation Type to estimate the connectivity between each planning unit. We selected the **bioregion_short.shp** as the **Habitat Type Shapefile** so that pairs of planning units which contain the same habitat type are connected while others are not. The probability of connectivity then becomes ${1/distance^2}$, if pairs of planning units which contain the same habitat type, normalized for each source planning unit so that the sum of probabilities is 1 (*i.e.* row normalized). However, since this process is fairly time consuming we've provided the pre-calculated matrix. The **Habitat Neighbour Buffer**, in this case set to 1 m, is the maximum distance in meters where neighbouring planning units could be considered directly connected. The **Habitat Connectivity Lower Threshold** is the value below which connectivity links are considered negligible and set to 0.
+The connectivity data we use in this example was created by Marxan Connect by calculating using the "**Habitat Type +Resistance**" options. We selected the "**Euclidean Distance**" Distance Calculation Type to estimate the connectivity between each planning unit. We selected the **bioregion_short.shp** as the **Habitat Type Shapefile** so that pairs of planning units which contain the same habitat type are connected while others are not. The probability of connectivity then becomes ${1/distance^2}$, if pairs of planning units which contain the same habitat type, normalized for each source planning unit so that the sum of probabilities is 1 (*i.e.* row normalized). The **Habitat Neighbour Buffer**, in this case set to 1 m, is the maximum distance in meters where neighbouring planning units could be considered directly connected. The **Habitat Connectivity Lower Threshold** is the value below which connectivity links are considered negligible and set to 0. However, since this whole process is fairly time consuming we've provided the pre-calculated matrix. 
 
-On this tab, ensure that the **Connectivity Matrix** refers to the correct file. For this example, this should read **IsolationByDistance.csv**. Since this data represents we have provided the connectivity matrix, we can now skip that part and select the **Connectivity Matrix** option from the input category drop down menu. 
+Ensure that the **Connectivity Matrix** refers to the correct file. For this example, this should read **IsolationByDistance.csv**.
 
 Your **Connectivity Input** tab should look like this (you should not have to change any settings):
 
@@ -269,17 +269,17 @@ Now proceed to the **Connectivity Metrics** tab.
 
 ## Connectivity Metrics
 
-In this example, we have chosen to incorporate landscape connectivity data as the boundary definitation, and therefore, have selected the **Connectivity as boundary** option in the **Planning Unit Dependency as Boundary Definition** section.  This option directly substitutes the supplied connectivity data (_i.e._ Spatial Dependencies) for the boundary lengths in the boundary definitions file (_i.e._ `boundary.dat`; see Beger et al. (2010)), and assumes the user has provided appropriate connectivity data (_e.g._ appropriate scale, units, and rank-order). 
+In this example, we have chosen to incorporate landscape connectivity data as the spatial dependencies between planning units, and therefore, have selected the **Connectivity as boundary** option in the **Planning Unit Dependency as Boundary Definition** section.  This option directly substitutes the supplied connectivity data (_i.e._ Spatial Dependencies) for the boundary lengths in the boundary definitions file (_i.e._ `boundary.dat`; see Beger et al. (2010)), and assumes the user has provided appropriate connectivity data (_e.g._ appropriate scale, units, and rank-order). 
 
 Alternatively, landscape connectivity data could be incorporated as a discrete conservation feature. The drop down menu in the top right corner gives definitions, possible objectives and the mathematical formulations for different conservation feature options.  See [demographic connectivity tutorial ](./CF_demographic.html) for more information.
 
 ![**Figure 5:** *Connectivity Metrics Tab .*\label{workflow}](images/Connectivity_Metrics_tab_landscape.png)
 
-Once you have selected the approriate landscape connectivity inputs press **Calculate Metrics** and proceed to the **Pre-Evaluation** tab.
+Once you have selected the appropriate landscape connectivity inputs press **Calculate Metrics** and proceed to the **Pre-Evaluation** tab.
 
 ## Pre-Evaluation
 
-This page allows you to evaluate the metrics created on the **Connectivity Metrics** tab in more detail. It also allows you to choose how you would like to create the connectivity metrics file for further analysis. In this example, we've chosen to append the new connectivity based conservation metrics to the existing Marxan files by selecting **Append**  under the Metrics option box.
+This page allows you to evaluate the metrics created on the **Connectivity Metrics** tab in more detail. It also allows you to choose how you would like to create the connectivity metrics file for further analysis. In this example, we've chosen to append the new connectivity based conservation metrics to the existing Marxan files by selecting **Append**  under the Metrics option box, but since you're not adding any new conservation features Export and Append are equivalent.
 
 ![**Figure 6:** *Pre-Evaluation tab .*\label{workflow}](images/Pre_Eval_tab_landscape.png)
 
@@ -292,9 +292,9 @@ Let's examine the appended file.
 Locate the **boundary.dat** file that was created in your Marxan directory folder. This file should look like the table below, which
 ### `boundary.dat`
 
-This table represents the boundaries between planning units as the values in the connectivity matrix from above (**IsolationByDistance.csv**)above.
+This table represents the spatial dependencies  between planning units as the values in the connectivity matrix from above (**IsolationByDistance.csv**) above (*i.e.* connectivity strength instead of boundary length).
 
-The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the boundary.dat file. The original dataset has 38648 entries.
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the **boundary.dat ** file. The original dataset has 38648 entries.
 
 ```{r}
 
